Added unit tests to improve code coverage.